added Transactions table

--- a/admin.html
+++ b/admin.html
@@ -192,27 +192,26 @@
         <table class="data-table">
           <thead>
             <tr>
+              <th>User ID</th>
               <th>Txn ID</th>
-              <th>User</th>
+              <th>Payment For</th>
+              <th>Interested ID</th>
               <th>Amount</th>
               <th>Date</th>
               <th>Status</th>
+              <th>Merchant Invoice</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>T001</td>
-              <td>John Doe</td>
-              <td>$50</td>
-              <td>2025-11-09</td>
+              <td>1</td>
+              <td>338838</td>
+              <td>Profile</td>
+              <td>1</td>
+              <td>Amount</td>
+              <td>11/11/2025</td>
               <td>Success</td>
-            </tr>
-            <tr>
-              <td>T002</td>
-              <td>Jane Smith</td>
-              <td>$30</td>
-              <td>2025-11-08</td>
-              <td>Pending</td>
+              <td>MV-441544</td>
             </tr>
           </tbody>
         </table>
