added login page and advertise section

--- a/admin.html
+++ b/admin.html
@@ -220,12 +220,6 @@
       <!-- ADVERTISEMENT -->
       <section id="advertisement" class="content-section">
         <h2>Advertisement</h2>
-        <div class="ads-section">
-          <div class="ad-card">
-            <img src="https://via.placeholder.com/300x150" alt="Ad" />
-            <p>Ad Title: Winter Offer</p>
-          </div>
-        </div>
         <form class="ad-form">
           <h3>Add New Advertisement</h3>
           <input type="text" placeholder="Ad Title" required />
@@ -233,6 +227,30 @@
           <input type="file" required />
           <button type="submit">Add Advertisement</button>
         </form>
+        <div class="ads-section">
+          <div class="ad-card">
+            <a href="">
+              <img
+                src="https://cdn.pixabay.com/photo/2015/06/19/21/24/avenue-815297_640.jpg"
+                alt="Ad"
+            /></a>
+            <p>Ad Title: Winter Offer</p>
+            <div class="advertiseInactive">
+              <a href="#" class="status-btn inactive">Inactive</a>
+            </div>
+          </div>
+          <div class="ad-card">
+            <a href="">
+              <img
+                src="https://cdn.pixabay.com/photo/2015/06/19/21/24/avenue-815297_640.jpg"
+                alt="Ad"
+            /></a>
+            <p>Ad Title: Winter Offer</p>
+            <div class="advertiseInactive">
+              <a href="#" class="status-btn inactive">Inactive</a>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
