--- a/index.html
+++ b/index.html
@@ -3,50 +3,51 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <!-- Roboto fonts by google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-    <!-- font awesome cdn -->
+    <title>Admin Login</title>
+    <link rel="stylesheet" href="login.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
-      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-    <title>Ghotok-BD Admin Panel</title>
   </head>
   <body>
-    <!-- main container -->
-    <div id="container">
-      <!-- side bar -->
-      <div id="sideBar">
-        <div>
-          <h2>Ghotok-BD</h2>
-          <h2>Admin Panel</h2>
+    <div class="login-container">
+      <form class="login-box">
+        <h2><i class="fa-solid fa-user-shield"></i> Admin Login</h2>
+
+        <div class="input-group">
+          <label for="username"
+            ><i class="fa-solid fa-user"></i> Username</label
+          >
+          <input
+            type="text"
+            id="username"
+            name="username"
+            placeholder="Enter your username"
+            required
+          />
         </div>
-        <ul class="navigationLinks">
-          <li class="navLink" data-target="allUsers">
-            <i class="fa-solid fa-users"></i> All Users
-          </li>
-          <li class="navLink" data-target="allBioData">
-            <i class="fa-solid fa-id-card"></i> All bio-data
-          </li>
-        </ul>
-      </div>
-      <!-- main content -->
-      <div id="mainContent">
-        <!-- All users -->
-        <div id="allUsers">All users</div>
-        <!-- All bio data -->
-        <div id="allBioData">All bio-data</div>
-      </div>
+
+        <div class="input-group">
+          <label for="password"
+            ><i class="fa-solid fa-lock"></i> Password</label
+          >
+          <input
+            type="password"
+            id="password"
+            name="password"
+            placeholder="Enter your password"
+            required
+          />
+        </div>
+
+        <!-- <div class="options">
+          <label><input type="checkbox" id="remember" /> Remember Me</label>
+          <a href="#" class="forgot">Forgot Password?</a>
+        </div> -->
+
+        <button type="submit" class="login-btn">Login</button>
+      </form>
     </div>
-    <script src="./script.js"></script>
   </body>
 </html>
